# py3tools-biglib-1.x

./: .bumpversion.cfg  .gitignore  CHANGES.md  README.md  hits.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
src/biglib/: __init__.py  boxit.py  findup.py  version.py
src/biglib/helpers/: properties_helper.py  service_definition_helper.py
src/biglib/locations/: common.py
src/biglib/model/: cli_options.py  extended_service_definition.py  properties.py  service_config.py  service_config_method.py  service_config_param.py  service_config_params.py  service_config_props.py  service_config_request_param.py  service_config_response_param.py  service_config_version.py  service_definition.py  service_definitions.py
src/biglib/utils/: dir_utils.py  find_mods.py  list_utils.py  locations.py  output.py  terminal.py  text_utils.py
test/data/json/: CHECK.json
test/data/props/: simple5.properties
test/data/xml/: simple1.xml  simple2.xml
test/locations/: test_common.py
test/locations/vertigo/: test_common.py
test/model/: helpers.py  test_service_config.py  test_service_config_method.py  test_service_config_param.py  test_service_config_params.py  test_service_config_props.py  test_service_config_request_param.py  test_service_config_response_param.py  test_service_config_version.py  test_service_definition.py  test_service_definitions.py
test/utils/: test_find_mods.py  test_list_utils.py
test/utils/find_mods/: test_find_mods.py
test/utils/list_utils/: test_list_utils.py
test/utils/locations/: test_locations.py
test/utils/sparky/: __init__.py
(+8 files in other folders)
