[build-system]
requires = [ "flit_core >=2,<3" ]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "biglib"
author = "G A Offord"
author-email = "gofford@accertify.com"
requires = [
    "flit_core >=2,<3",
    "attrs",  "pytest", "singleton_decorator", "memoize2", "daiquiri",
    "requests", "urllib3", "mako", "fuzzywuzzy", "python-levenshtein",
]
requires-python=">=3.8"
description-file="README.md"
classifiers=[
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
]
doc = ["sphinx"]

[tool.flit.entrypoints.console_scripts]
